Extended state machine, improved behaviour, added npc freezing

--- a/GraduationSimulator/Assembly-CSharp.csproj
+++ b/GraduationSimulator/Assembly-CSharp.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Assets\Scripts\EventManager.cs" />
     <Compile Include="Assets\Scripts\FieldOfView.cs" />
     <Compile Include="Assets\Scripts\FPSCam.cs" />
+    <Compile Include="Assets\Scripts\NPCList.cs" />
     <Compile Include="Assets\Scripts\Patrol.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\SemesterTimer.cs" />
