course menu fixed

--- a/GraduationSimulator/Assembly-CSharp.csproj
+++ b/GraduationSimulator/Assembly-CSharp.csproj
@@ -70,8 +70,13 @@
     <Compile Include="Assets\Scripts\Collectables\Credit.cs" />
     <Compile Include="Assets\Scripts\Collectables\ILookAtHandler.cs" />
     <Compile Include="Assets\Scripts\Collectables\Laptop.cs" />
+    <Compile Include="Assets\Scripts\Courses\Abilities\Ability.cs" />
+    <Compile Include="Assets\Scripts\Courses\Abilities\IUnlockAbility.cs" />
+    <Compile Include="Assets\Scripts\Courses\Abilities\UnlookDoorAbility.cs" />
+    <Compile Include="Assets\Scripts\Courses\Abilities\UnlookObjectAbility.cs" />
     <Compile Include="Assets\Scripts\Courses\Course.cs" />
     <Compile Include="Assets\Scripts\Courses\CourseFactory.cs" />
+    <Compile Include="Assets\Scripts\Courses\CourseTypes.cs" />
     <Compile Include="Assets\Scripts\Courses\HackingCourse.cs" />
     <Compile Include="Assets\Scripts\Courses\PsychologyCourse.cs" />
     <Compile Include="Assets\Scripts\Courses\ScienceCourse.cs" />
@@ -79,20 +84,21 @@
     <Compile Include="Assets\Scripts\Door.cs" />
     <Compile Include="Assets\Scripts\DoorTrigger.cs" />
     <Compile Include="Assets\Scripts\EventManager.cs" />
-    <Compile Include="Assets\Scripts\FieldOfView.cs" />
-    <Compile Include="Assets\Scripts\FPSCam.cs" />
-    <Compile Include="Assets\Scripts\NPCList.cs" />
-    <Compile Include="Assets\Scripts\Patrol.cs" />
-    <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\Player\FPSCam.cs" />
+    <Compile Include="Assets\Scripts\Player\Player.cs" />
+    <Compile Include="Assets\Scripts\Player\UpgradePlayer.cs" />
     <Compile Include="Assets\Scripts\SemesterTimer.cs" />
+    <Compile Include="Assets\Scripts\Teachers\FieldOfView.cs" />
+    <Compile Include="Assets\Scripts\Teachers\NPCList.cs" />
+    <Compile Include="Assets\Scripts\Teachers\Patrol.cs" />
     <Compile Include="Assets\Scripts\UI\CourseMenu.cs" />
     <Compile Include="Assets\Scripts\UI\CoursePanel.cs" />
     <Compile Include="Assets\Scripts\UI\InfoBox.cs" />
     <Compile Include="Assets\Scripts\UI\Menu.cs" />
     <Compile Include="Assets\Scripts\UI\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\UI\UIManager.cs" />
-    <Compile Include="Assets\UpgradeButton.cs" />
-    <Compile Include="Assets\UpgradeSelectButton.cs" />
+    <Compile Include="Assets\Scripts\UI\UpgradeButton.cs" />
+    <Compile Include="Assets\Scripts\UI\UpgradeSelectButton.cs" />
     <None Include="Assets\Shaders\GlowOutline.shader" />
     <None Include="Assets\Shaders\Vial\FireSphere.shader" />
     <None Include="Assets\Shaders\Outline.shader" />
