course menu + some parts of skill tree work

--- a/GraduationSimulator/Assembly-CSharp.csproj
+++ b/GraduationSimulator/Assembly-CSharp.csproj
@@ -69,20 +69,19 @@
     <Compile Include="Assets\Scripts\Collectables\CollectibleVial.cs" />
     <Compile Include="Assets\Scripts\Collectables\Credit.cs" />
     <Compile Include="Assets\Scripts\Collectables\ILookAtHandler.cs" />
+    <Compile Include="Assets\Scripts\Collectables\Interactable.cs" />
     <Compile Include="Assets\Scripts\Collectables\Laptop.cs" />
-    <Compile Include="Assets\Scripts\Courses\Abilities\Ability.cs" />
-    <Compile Include="Assets\Scripts\Courses\Abilities\IUnlockAbility.cs" />
-    <Compile Include="Assets\Scripts\Courses\Abilities\UnlookDoorAbility.cs" />
-    <Compile Include="Assets\Scripts\Courses\Abilities\UnlookObjectAbility.cs" />
     <Compile Include="Assets\Scripts\Courses\Course.cs" />
     <Compile Include="Assets\Scripts\Courses\CourseFactory.cs" />
     <Compile Include="Assets\Scripts\Courses\CourseTypes.cs" />
     <Compile Include="Assets\Scripts\Courses\HackingCourse.cs" />
     <Compile Include="Assets\Scripts\Courses\PsychologyCourse.cs" />
+    <Compile Include="Assets\Scripts\Courses\ResearchCourse.cs" />
     <Compile Include="Assets\Scripts\Courses\ScienceCourse.cs" />
     <Compile Include="Assets\Scripts\Courses\Skills\TriggeredVial.cs" />
-    <Compile Include="Assets\Scripts\Door.cs" />
-    <Compile Include="Assets\Scripts\DoorTrigger.cs" />
+    <Compile Include="Assets\Scripts\Courses\SportCourse.cs" />
+    <Compile Include="Assets\Scripts\Environment\Door.cs" />
+    <Compile Include="Assets\Scripts\Environment\DoorTrigger.cs" />
     <Compile Include="Assets\Scripts\EventManager.cs" />
     <Compile Include="Assets\Scripts\Player\FPSCam.cs" />
     <Compile Include="Assets\Scripts\Player\Player.cs" />
